<resources>

    <!--Изначально приложение должно было называться "Карри" и иметь соответствующие оранжевые цвета,
    но цвета мне не понравились, поэтому приложение называется "Тимьян" и оформлена в зеленом цвете.-->
    <string name="app_name">Thyme</string>

    <string name="search_recipe">Search</string>
    <string name="cuisine_recipes">Random</string>
    <string name="bookmarks">Favourite</string>

    <string name="recipes">Recipes</string>
    <string name="error">Something went wrong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_to_cook">What to cook?</string>

    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="african">African</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="indian">Indian</string>
    <string name="british">British</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="mexican">Mexican</string>
    <string name="spanish">Spanish</string>
    <string name="jewish">Jewish</string>
    <string name="american">American</string>
    <string name="greek">Greek</string>
    <string name="german">German</string>
    <string name="cuisine">%1$s cuisine</string>

    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

    <string name="recipe_error">Unfortunatelly, there are no instructions for this recipe :(</string>
    <string name="check_internet">Something is wrong :( \nCheck your internet connection</string>
    <string name="no_favorites">There are no favorite recipes yet.\nYou definitely should add some</string>

    <string name="servings">%1$d servings</string>
    <string name="serving">%1$d serving</string>
    <string name="time">%1$d min</string>
    <string name="cuisine_title">Cuisine</string>
    <string name="diet_title">Diet</string>
    <string name="plus">+</string>
    <string name="recipe_image">Recipe image</string>


</resources>
